adding candlestick data kline and ukline
