# domain/market/dto/req.go
@@ -25,3 +25,13 @@ type GetBinanceAgregateTradeListReq struct {
 	StartTime time.Time `query:"startTime" validate:"omitempty"`
 	EndTime   time.Time `query:"endTime" validate:"omitempty"`
 }
+
+type GetBinanceCandleStickDataReq struct {
+	Symbol  string    `query:"symbol" validate:"required,uppercase"`
+	Interval string    `query:"interval" validate:"required,oneof=1m 3m 5m 15m 30m 1h 2h 4h 6h 8h 12h 1d 3d 1w 1M"`
+	StartTime time.Time `query:"startTime" validate:"omitempty"`
+	EndTime   time.Time `query:"endTime" validate:"omitempty"`
+	TimeZone  string    `query:"timeZone" validate:"omitempty"`
+	Limit   int       `query:"limit" validate:"gte=1,lte=1000"`
+	TypeKline string    `query:"typeKline" validate:"omitempty,oneof=uiklines klines"`
+}
