# entities/martket_entities.go
@@ -31,6 +31,7 @@ type MarketOldTradeLookupEntity struct {
 	IsBestMatch bool `json:"isBestMatch"`
 }
 
+// https://developers.binance.com/docs/binance-spot-api-docs/rest-api/market-data-endpoints#compressedaggregate-trades-list
 type MarketAgregateTradeListEntity struct {
 	TradeId      int    `json:"a"`
 	Price        string `json:"p"`
@@ -40,5 +41,23 @@ type MarketAgregateTradeListEntity struct {
 	Timestamp    int64  `json:"T"`
 	IsBuyerMaker bool   `json:"m"`
 	IsBestMatch  bool   `json:"M"`
-	DateTime     string `json:"-"` // isi man
+	DateTime     string `json:"-"`
+}
+
+// https://developers.binance.com/docs/binance-spot-api-docs/rest-api/market-data-endpoints#klinecandlestick-data
+type MarketCandleStickDataEntity struct {
+	OpenTime  int64  `json:"openTime"`
+	OpenTimeStr string `json:"openTimeStr"`
+	OpenPrice      string `json:"openPrice"`
+	HighPrice      string `json:"highPrice"`
+	LowPrice       string `json:"lowPrice"`
+	ClosePrice     string `json:"closePrice"`
+	Volume         string `json:"volume"`
+	CloseTime      int64  `json:"closeTime"`
+	CloseTimeStr  string `json:"closeTimeStr"`
+	QuoteAssetVolume string `json:"quoteAssetVolume"`
+	NumberOfTrades   int    `json:"numberOfTrades"`
+	TakerBuyBaseAssetVolume string `json:"takerBuyBaseAssetVolume"`
+	TakerBuyQuoteAssetVolume string `json:"takerBuyQuoteAssetVolume"`
+	TypeKline string `json:"typeKline"` // klines or uiklines
 }
